feat: implement core backend services, DTOs, controllers, and security configurations for HMS management